Fix typo in silk CMakeLists.txt (RPIVATE -> PRIVATE)

--- a/external/silk/CMakeLists.txt
+++ b/external/silk/CMakeLists.txt
@@ -189,7 +189,7 @@ target_include_directories("${TARGET_NAME}"
   PUBLIC
     "${PROJECT_SOURCE_DIR}/include"
 
-  RPIVATE
+  PRIVATE
     "${PROJECT_SOURCE_DIR}/include/silk"
 )
 
