--- a/external/speex/CMakeLists.txt
+++ b/external/speex/CMakeLists.txt
@@ -189,6 +189,8 @@ target_compile_options("${TARGET_NAME}"
     >
 
     $<IF:$<C_COMPILER_ID:MSVC>,/W0,-w>
+    $<$<AND:$<C_COMPILER_ID:MSVC>,$<NOT:$<CONFIG:Debug>>>:/fp:fast>
+    $<$<AND:$<NOT:$<C_COMPILER_ID:MSVC>>,$<NOT:$<CONFIG:Debug>>>:-ffast-math>
 )
 
 #-------------------------------------------------------------------------------
