Add Dev Container configuration
Configure a development container to provide a consistent and reproducible Linux-based C++ development environment.
Note: Dev Containers are supported in Visual Studio 2022 version 17.4 and newer.

--- a/.gitattributes
+++ b/.gitattributes
@@ -173,6 +173,12 @@ CMakeLists.txt          eol=lf
 CMakePresets.json       eol=lf
 CMakeUserPresets.json   eol=lf
 
+##############
+#   Docker   #
+##############
+
+ubuntu-24.04.gnu.clang  linguist-language=Dockerfile
+
 ####################
 #   EditorConfig   #
 ####################
